# verifiable-agent-log

./: BADGES.md  LICENSE  README.md
blog/: agent-trust-gap.md
docs/: VAL_SPEC_v1.md
lib/: val-wallets.mjs
openclaw-skill/: SKILL.md
openclaw-skill/scripts/: val-attest.js  val-init.js  val-soul.js  val-verify.js
val-crewai/: README.md  pyproject.toml
val-crewai/examples/: basic_crew.py  verify_crew.py
val-crewai/val_crewai/: __init__.py  callbacks.py  client.py  crew.py  verify.py
val-langchain/: README.md  pyproject.toml
val-langchain/examples/: basic_usage.py  verify_agent.py
val-langchain/val_langchain/: __init__.py  client.py  handler.py  verify.py
val-relay/: package-lock.json  package.json
val-relay/src/: server.mjs  swap.mjs  topup.mjs
val-sdk/: .gitignore  README.md  package-lock.json  package.json
val-sdk/src/: autofund.ts  hash.ts  index.ts  policy.ts  provision.ts  reader.ts  types.ts  val.ts  wallet.ts
val-sdk/test/: integration.test.mjs  policy.test.mjs
