[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "val-crewai"
version = "0.1.0"
description = "VAL (Verifiable Agent Log) integration for CrewAI — immutable audit trails on Hedera HCS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Aite", email = "aite550659@gmail.com" }]
keywords = ["val", "crewai", "hedera", "hcs", "audit", "attestation", "verifiable"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "crewai>=0.28.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/aite550659-max/verifiable-agent-log"
Repository = "https://github.com/aite550659-max/verifiable-agent-log"
